Fixed copyright alignment

--- a/_sass/_contentinfo.scss
+++ b/_sass/_contentinfo.scss
@@ -39,6 +39,10 @@ color: rgba($white, 0.7);
 }
 
 .contentinfo__copyright {
+
+  small {
+    width: 100%;
+  }
   @include medium {
   text-align: right;
   }
